VIVO-337: css change to prevent cutoff

--- a/webapp/web/css/vitro.css
+++ b/webapp/web/css/vitro.css
@@ -89,7 +89,7 @@
     margin-right:25px;
 }
 #isotope-container {
-    overflow:visible;
+    overflow:visible !important;
 }
 #isotope-container li {
     width:290px;
